--- a/src/index.mdx
+++ b/src/index.mdx
@@ -4,45 +4,9 @@ route: /
 order: -1
 sidebar: true
 ---
-import PageManager from './PageManager';
-import PageItem from './PageItem';
-import PageView1 from './PageView1';
-import PageViewWrap from './PageViewWrap';
-import { Playground, Props } from 'docz';
 
+# 仿原生APP窗口
 
+## `npm i h5-webview --save`  
 
-<Playground>
-{
-  <button
-    style={{marginTop:100}}
-    onClick={() => {
-      PageManager.openPage(new PageItem(PageView1, { index: 1 }));
-    }}
-  >
-    打开自定义页面-PageView1
-  </button>
-}
-</Playground>
-
-<Playground>
-   <button
-    style={{marginTop:100}}
-    onClick={() => {
-      PageManager.openPage(
-        new PageItem(
-          PageViewWrap, 
-          {
-            children:<div>ccc</div>,
-            title:'aa',
-            extra:<span>+</span>
-          }
-      ));
-    }}
-  >
-    打开通用页面容器
-  </button>
-</Playground>
-
-<Props of={PageViewWrap} />
-
+npm地址：https://www.npmjs.com/package/h5-webview
