--- a/src/index.mdx
+++ b/src/index.mdx
@@ -10,3 +10,5 @@ sidebar: true
 ## `npm i h5-webview --save`  
 
 npm地址：https://www.npmjs.com/package/h5-webview
+
+<img src={require('../readme/demo.gif')} style={{width:'300px' }}/>
